# cmd/docs/swagger.json
@@ -3,6 +3,7 @@
     "info": {
         "contact": {}
     },
+    "basePath": "/api/v1",
     "paths": {
         "/auth/login": {
             "post": {
@@ -166,6 +167,11 @@
         },
         "/time/current-time": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Returns the current time",
                 "consumes": [
                     "application/json"
@@ -177,15 +183,6 @@
                     "time"
                 ],
                 "summary": "get current time endpoint",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Bearer",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -210,6 +207,11 @@
         },
         "/time/next-day": {
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Switches to the next day",
                 "consumes": [
                     "application/json"
@@ -221,15 +223,6 @@
                     "time"
                 ],
                 "summary": "switch to next day endpoint",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Bearer",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -254,6 +247,11 @@
         },
         "/time/reset-time": {
             "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Resets the time to the current day",
                 "consumes": [
                     "application/json"
@@ -265,15 +263,6 @@
                     "time"
                 ],
                 "summary": "reset time to current day endpoint",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Bearer",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -298,6 +287,11 @@
         },
         "/tracker/habits": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Lists all habits for the authenticated user",
                 "consumes": [
                     "application/json"
@@ -309,15 +303,6 @@
                     "habit"
                 ],
                 "summary": "list user habits endpoint",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Bearer",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "List of user habits",
@@ -343,6 +328,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Updates a habit for the authenticated user",
                 "consumes": [
                     "application/json"
@@ -355,13 +345,6 @@
                 ],
                 "summary": "update habit endpoint",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Bearer",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
                     {
                         "description": "Update habit",
                         "name": "requestBody",
@@ -394,6 +377,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Creates habit in the system",
                 "consumes": [
                     "application/json"
@@ -414,13 +402,6 @@
                         "schema": {
                             "$ref": "#/definitions/habit.CreateHabitRequest"
                         }
-                    },
-                    {
-                        "type": "string",
-                        "description": "Bearer",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
                     }
                 ],
                 "responses": {
@@ -447,6 +428,11 @@
         },
         "/tracker/habits/completed": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Lists all completed habits for the authenticated user",
                 "consumes": [
                     "application/json"
@@ -458,15 +444,6 @@
                     "habit"
                 ],
                 "summary": "list users completed habits endpoint",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Bearer",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "List of completed user habits",
@@ -494,6 +471,11 @@
         },
         "/tracker/habits/{habitId}": {
             "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Deletes a habit for the authenticated user",
                 "consumes": [
                     "application/json"
@@ -506,13 +488,6 @@
                 ],
                 "summary": "delete habit endpoint",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Bearer",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
                     {
                         "type": "string",
                         "description": "Habit ID",
@@ -545,6 +520,11 @@
         },
         "/tracker/progress/{habitId}": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Get progress of the habit",
                 "consumes": [
                     "application/json"
@@ -557,13 +537,6 @@
                 ],
                 "summary": "get progress endpoint",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Bearer",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
                     {
                         "type": "string",
                         "description": "Habit ID",
@@ -594,6 +567,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Adds progress to the habit",
                 "consumes": [
                     "application/json"
@@ -606,13 +584,6 @@
                 ],
                 "summary": "add progress endpoint",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Bearer",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
                     {
                         "type": "string",
                         "description": "Habit ID",
@@ -645,6 +616,11 @@
         },
         "/tracker/reminder": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Get reminder for the user",
                 "consumes": [
                     "application/json"
@@ -656,15 +632,6 @@
                     "progress"
                 ],
                 "summary": "get reminder endpoint",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Bearer",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -696,12 +663,9 @@
                 "summary": "Get API version",
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "Successful response",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/main.VersionResponse"
                         }
                     }
                 }
@@ -764,7 +728,7 @@
                     "example": "Drink 2 liters of water every day"
                 },
                 "goal": {
-                    "$ref": "#/definitions/habit.Goal"
+                    "$ref": "#/definitions/habit.UpdateGoal"
                 }
             }
         },
@@ -828,6 +792,30 @@
                 }
             }
         },
+        "habit.UpdateGoal": {
+            "type": "object",
+            "properties": {
+                "frequency_type": {
+                    "description": "daily, weekly, monthly",
+                    "type": "string",
+                    "enum": [
+                        "daily",
+                        "weekly",
+                        "monthly"
+                    ],
+                    "example": "daily"
+                },
+                "times_per_frequency": {
+                    "description": "How many times to complete within each frequency (e.g., per day or per week)",
+                    "type": "integer",
+                    "example": 1
+                },
+                "total_tracking_periods": {
+                    "type": "integer",
+                    "example": 15
+                }
+            }
+        },
         "habit.UpdateHabitRequest": {
             "type": "object",
             "properties": {
@@ -836,13 +824,29 @@
                     "example": "Drink 2 liters of water every day"
                 },
                 "goal": {
-                    "$ref": "#/definitions/habit.Goal"
+                    "$ref": "#/definitions/habit.UpdateGoal"
                 },
                 "id": {
                     "type": "integer",
                     "example": 1
                 }
             }
+        },
+        "main.VersionResponse": {
+            "type": "object",
+            "properties": {
+                "version": {
+                    "type": "string",
+                    "example": "1.0.0"
+                }
+            }
+        }
+    },
+    "securityDefinitions": {
+        "ApiKeyAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
